--- a/app/globals.css
+++ b/app/globals.css
@@ -57,7 +57,7 @@
     --popover: oklch(1 0 0);
     --popover-foreground: oklch(0.145 0 0);
 
-    --primary: oklch(0.51 0.23 277); /* Purple */
+    --primary: oklch(0.49 0.22 264);
     --primary-foreground: oklch(0.96 0.02 272);
 
     --secondary: oklch(0.967 0.001 286.375);
@@ -109,22 +109,22 @@
 }
 
 .dark {
-    --background: #190e26; /* deep black-purple */
+    --background: oklch(0.14 0 286);
     --foreground: oklch(0.985 0 0);
 
-    --card: oklch(0.205 0 0); /* elevated panels */
+    --card: oklch(0.21 0.01 286); /* elevated panels */
     --card-foreground: oklch(0.985 0 0);
 
     --popover: oklch(0.205 0 0);
     --popover-foreground: oklch(0.985 0 0);
 
-    --primary: #6e04f9; /* neon purple */
+    --primary: oklch(0.49 0.22 264);
     --primary-foreground: oklch(0.96 0.02 272);
 
     --secondary: oklch(0.274 0.006 286.033);
     --secondary-foreground: oklch(0.985 0 0);
 
-    --muted: #241a34;
+    --muted: oklch(0.21 0.01 286);
     --muted-foreground: oklch(0.708 0 0);
 
     --accent: oklch(0.371 0 0);
@@ -133,9 +133,9 @@
     --destructive: oklch(0.704 0.191 22.216);
 
     --border: oklch(1 0 0 / 80%);
-    --input: oklch(1 0 0 / 5%);
+    --input: oklch(0.27 0.01 286);
 
-    --ring: #6e04f9; /* glow ring */
+    --ring: oklch(0.44 0.01 286); /* glow ring */
 
     /* Optional charts */
     --chart-1: oklch(0.79 0.1 275);
@@ -172,4 +172,22 @@
         @apply bg-background text-foreground;
         @apply bg-background text-foreground;
     }
+}
+
+input {
+    color-scheme: dark;
+}
+/* Targets the autofill state in most browsers */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    /* This "shadow" trick overwrites the background color */
+    -webkit-box-shadow: 0 0 0px 1000px #1a1a1a inset !important;
+
+    /* This changes the text color back to white/off-white */
+    -webkit-text-fill-color: #ffffff !important;
+
+    /* Smooths out the transition so it doesn't flash yellow */
+    transition: background-color 5000s ease-in-out 0s;
 }
